# arc-human-skills

./: README.md  WINDOWS_RUNNER.md  config.yaml  pyproject.toml  run_windows.bat  run_windows.ps1
arc_human_skills/: __init__.py  benchmark.py  config.py  hailo_evaluator.py  paint_automation.py  trainer.py  video_tutorial.py
arc_human_skills.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
arc_human_skills/drawing_fundamentals/: __init__.py  construction.py  curriculum.py  line_control.py  perspective.py  primitives_2d.py  wireframe_3d.py
arc_human_skills/eval_tasks/: __init__.py  arc_tasks.json
arc_human_skills/painting/: __init__.py  shapes.py
arc_human_skills/reading/: __init__.py  recognizer.py  training_data.py
arc_human_skills/skill_dag/: manifest.yaml  orchestrator.py
arc_human_skills/writing/: __init__.py  stroke_patterns.py
tests/: test_benchmark_trainer.py  test_drawing_fundamentals.py  test_paint_automation.py  test_painting.py  test_reading.py  test_skill_dag.py  test_video_tutorial.py  test_writing.py
